--- a/src/styles/themes/_default-theme.scss
+++ b/src/styles/themes/_default-theme.scss
@@ -1047,4 +1047,9 @@
   --pill-small-size-border-radius: var(--border-radius-s);
   --pill-xsmall-size-border-radius: var(--border-radius-s);
   // ------ Pill theme ------
+
+  // ------ Match Score theme ------
+  --match-score-background-color: var(--primary-tertiary-color);
+  --match-score-text-color: var(--primary-secondary-color);
+  // ------ Match Score theme ------
 }
